--- a/css-learning/Forms/basic-form/basic-form.html
+++ b/css-learning/Forms/basic-form/basic-form.html
@@ -17,7 +17,7 @@
         <input id="email" type="email" />
       </div>
       <button type="submit">Submit</button>
-      <button type="reset">Reset</button>
+      <button type="reset">Clear</button>
     </form>
   </body>
 </html>
