--- a/css-learning/Images/exercise/e1/index.html
+++ b/css-learning/Images/exercise/e1/index.html
@@ -19,11 +19,8 @@
       src="jeremy-thomas-E0AHdsENmDg-unsplash_qey1vr_c_scale,w_1400.jpg"
       alt=""
     />
-    <div class="content">
-      <h1>So Much Fun</h1>
-      <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit, illo!
-      </p>
-    </div>
+
+    <h1>HUBBLE SPACE TELESCOPE</h1>
+    <p>30 Years of Discovery</p>
   </body>
 </html>
