--- a/css-learning/Images/exercise/e2/index.html
+++ b/css-learning/Images/exercise/e2/index.html
@@ -5,18 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
+    <script
+      src="https://kit.fontawesome.com/ec76dc48a3.js"
+      crossorigin="anonymous"
+    ></script>
     <title>E2</title>
   </head>
   <body>
-    <div class="menu">
-      <ul>
-        <li><a href="#">Dashboard</a></li>
-        <li><a href="#">Users</a></li>
-        <li><a href="#">Site</a></li>
-        <li><a href="#">Sales</a></li>
-        <li><a href="#">Email</a></li>
-        <li><a href="#">Settings</a></li>
-      </ul>
-    </div>
+    <ul class="menu">
+      <li><i class="fa-tachometer-alt 4x"></i><a href="#">Dashboard</a></li>
+      <li><i class="fa-user"></i><a href="#">Users</a></li>
+      <li><i class="fa-sitemap"></i><a href="#">Site</a></li>
+      <li><i class="fa-dollar-sign"></i><a href="#">Sales</a></li>
+      <li><i class="fa-envelope"></i><a href="#">Email</a></li>
+      <li><i class="fa-cogs"></i><a href="#">Settings</a></li>
+    </ul>
   </body>
 </html>
